# cmake.xerces-c

./: .gitignore  CMakeLists.txt  config.cmake.in
